# Rust_Learning

./: Cargo.toml
src/: coding_problems.rs  data.json  forLoop.rs  json_data.rs  learning_arrays.rs  main.rs  practice.rs
src/BeginningPractice/: coding_problems.rs  function.rs  learning_arrays.rs  practice.rs  scopes.rs
