[package]
name = "rust_learning"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "practice"
path = "src/practice.rs"

[[bin]]
name ="learning_arrays"
path = "src/learning_arrays.rs"


[[bin]]
name= "forLoop"
path= "src/forLoop.rs"

[[bin]]
name="coding_problems"
path="src/coding_problems.rs"

[dependencies]