[package]
name = "rust_learning"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "practice"
path = "src/BeginningPractice/practice.rs"

[[bin]]
name ="learning_arrays"
path = "src/BeginningPractice/learning_arrays.rs"


[[bin]]
name= "forLoop"
path= "src/BeginningPractice/forLoop.rs"

[[bin]]
name="coding_problems"
path="src/BeginningPractice/coding_problems.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


