[package]
name = "rust_learning"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "practice"
path = "src/BeginningPractice/practice.rs"

[[bin]]
name ="learning_arrays"
path = "src/BeginningPractice/learning_arrays.rs"


[[bin]]
name= "forLoop"
path= "src/BeginningPractice/forLoop.rs"

[[bin]]
name="coding_problems"
path="src/BeginningPractice/coding_problems.rs"

[[bin]]
name="scopes"
path="src/BeginningPractice/scopes.rs"


[[bin]]
name="function"
path="src/BeginningPractice/function.rs"

[[bin]]
name= "json_data"
path="src/json_data.rs"
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


